@@ -157,7 +157,7 @@ namespace events{
 		}
 
 		for(;;) {
-			const int res = gui::show_dialog(*gui_, NULL, _("Statistics"), "", gui::OK_CANCEL, &items);
+			const int res = gui::show_dialog2(*gui_, NULL, _("Statistics"), "", gui::OK_CANCEL, &items);
 			std::string title;
 			std::vector<std::string> items_sub;
 
@@ -187,7 +187,7 @@ namespace events{
 			}
 
 			if (items_sub.empty() == false)
-				gui::show_dialog(*gui_, NULL, "", title, gui::OK_ONLY, &items_sub);
+				gui::show_dialog2(*gui_, NULL, "", title, gui::OK_ONLY, &items_sub);
 		}
 	}
 
@@ -264,7 +264,7 @@ namespace events{
 			std::vector<gui::preview_pane*> preview_panes;
 			preview_panes.push_back(&unit_preview);
 
-			selected = gui::show_dialog(*gui_,NULL,_("Unit List"),"",
+			selected = gui::show_dialog2(*gui_,NULL,_("Unit List"),"",
 										gui::OK_ONLY,&items,&preview_panes,
 										"",NULL,0,NULL,NULL,-1,-1,NULL,NULL,"",&sorter);
 		}
@@ -346,7 +346,7 @@ namespace events{
 			items.push_back(IMAGE_PREFIX + std::string("random-enemy.png") + COLUMN_SEPARATOR +
 							IMAGE_PREFIX + "random-enemy.png");
 
-		gui::show_dialog(*gui_,NULL,"","",gui::CLOSE_ONLY,&items,
+		gui::show_dialog2(*gui_,NULL,"","",gui::CLOSE_ONLY,&items,
 						 NULL,"",NULL,0,NULL,NULL,-1,-1,NULL,NULL,"",&sorter);
 	}
 
@@ -541,7 +541,7 @@ namespace events{
 			std::vector<gui::preview_pane*> preview_panes;
 			preview_panes.push_back(&unit_preview);
 
-			recruit_res = gui::show_dialog(*gui_,NULL,_("Recruit"),
+			recruit_res = gui::show_dialog2(*gui_,NULL,_("Recruit"),
 					_("Select unit:") + std::string("\n"),
 					gui::OK_CANCEL,&items,&preview_panes,"",NULL,-1,NULL,NULL,-1,-1,
 					NULL,NULL,"recruit_and_recall");
@@ -680,7 +680,7 @@ namespace events{
 				std::vector<gui::preview_pane*> preview_panes;
 				preview_panes.push_back(&unit_preview);
 
-				res = gui::show_dialog(*gui_,NULL,_("Recall"),
+				res = gui::show_dialog2(*gui_,NULL,_("Recall"),
 						_("Select unit:") + std::string("\n"),
 						gui::OK_CANCEL,&options,
 						&preview_panes,"",NULL,-1,
@@ -1072,7 +1072,7 @@ namespace events{
 			std::vector<gui::preview_pane*> preview_panes;
 			preview_panes.push_back(&unit_preview);
 
-			choice = gui::show_dialog(*gui_,NULL,"",dsgettext(PACKAGE "-lib","Create Unit (Debug!)"),
+			choice = gui::show_dialog2(*gui_,NULL,"",dsgettext(PACKAGE "-lib","Create Unit (Debug!)"),
 									  gui::OK_CANCEL,&options,&preview_panes);
 		}
 
