@@ -21,6 +21,7 @@
 #include "image.hpp"
 #include "marked-up_text.hpp"
 #include "sdl_utils.hpp"
+#include "SDL.h"
 #include "SDL_image.h"
 #include "util.hpp"
 #include "video.hpp"
@@ -31,48 +32,41 @@
 #include <cassert>
 #include <numeric>
 
-namespace {
-//const size_t menu_font_size = font::SIZE_NORMAL;
-//const size_t menu_cell_padding = font::SIZE_NORMAL * 3/5;
-//gui::menu::style gui::menu::default_style;
-//gui::menu::imgsel_style gui::menu::slateborder_style("misc/selection");
-}
-
 namespace gui {
 
 	//static initializations
 menu::style gui::menu::default_style;
-#ifdef WESNOTH_PATH
-menu::imgsel_style gui::menu::slateborder_style( WESNOTH_PATH "/images/misc/selection");
-#else
-menu::imgsel_style gui::menu::slateborder_style("./images/misc/selection");
-#endif
+menu::imgsel_style gui::menu::slateborder_style("misc/selection");
 
 	//constructors
-menu::style::style() : font_size_(font::SIZE_NORMAL), cell_padding_(font::SIZE_NORMAL * 3/5),
+menu::style::style() : font_size_(font::SIZE_NORMAL),
+		cell_padding_(font::SIZE_NORMAL * 3/5), thickness_(0),
 		normal_rgb_(0x000000), normal_alpha_(0.2),
 		selected_rgb_(0x990000), selected_alpha_(0.6),
 		heading_rgb_(0x333333), heading_alpha_(0.3)
 {}
-menu::imgsel_style::imgsel_style(const std::string &img_base) : img_base_(img_base), thickness_(3),
+menu::imgsel_style::imgsel_style(const std::string &img_base) : img_base_(img_base),
 			initialized_(false), load_failed_(false)
 {}
 
 size_t menu::style::get_font_size() const { return font_size_; }
-size_t menu::style::get_cell_padding() { return cell_padding_; }
-
+size_t menu::style::get_cell_padding() const { return cell_padding_; }
+size_t menu::style::get_thickness() const { return thickness_; }
 
 
 bool menu::imgsel_style::load_image(const std::string &img_sub)
 {
 	std::string path = img_base_ + "-" + img_sub + ".png";
-	surface image(IMG_Load(path.c_str()));
+	const surface image = image::get_image(path,image::UNSCALED);
 	img_map_[img_sub] = image;
 	return(!image.null());
 }
 
 bool menu::imgsel_style::load_images()
 {
+	if(!initialized_)
+	{
+
 		if(    load_image("border-botleft")
 			&& load_image("border-botright")
 			&& load_image("border-topleft")
@@ -82,6 +76,9 @@ bool menu::imgsel_style::load_images()
 			&& load_image("border-top")
 			&& load_image("border-bottom") )
 		{
+			thickness_ = minimum(
+					img_map_["border-top"]->h,
+					img_map_["border-left"]->w);
 			cell_padding_ = maximum(cell_padding_, thickness_);
 
 			selected_rgb_ = 0x000000;
@@ -96,28 +93,34 @@ bool menu::imgsel_style::load_images()
 		}
 		else
 		{
+			thickness_ = 0;
 			initialized_ = true;
 			load_failed_ = true;
 		}
-		return (!load_failed_);
+	}
+	return (!load_failed_);
 }
 
 void menu::imgsel_style::draw_row(const menu& menu_ref, const std::vector<std::string>& row, const SDL_Rect& rect, ROW_TYPE type)
 {
-	if(!initialized_) load_images();
-	style::draw_row(menu_ref, row, rect, type);
-	if(type == SELECTED_ROW) {
+	if(!load_failed_) {
+		SDL_Rect item_rect = rect;
+		//item_rect.x += thickness_;
+		//item_rect.y += thickness_;
+		//item_rect.w -= 2*thickness_;
+		//item_rect.h -= 2*thickness_;
 
-		/* Draw border if it was succesfully loaded. */
-		if(!load_failed_) {
+		//draw item inside
+		style::draw_row(menu_ref, row, item_rect, type);
+
+		if(type == SELECTED_ROW) {
+
+			// draw border
 			surface image;
 			SDL_Rect area;
 			SDL_Rect clip = rect;
 			area.x = rect.x;
 			area.y = rect.y;
-			//area.w = minimum(image->w,rect->w);
-			//area.h = minimum(image->h,rect->h);
-			//SDL_BlitSurface(image, 0, gdis, &area);
 
 			image = img_map_["border-top"];
 			area.x = rect.x;
@@ -135,11 +138,6 @@ void menu::imgsel_style::draw_row(const menu& menu_ref, const std::vector<std::s
 				area.y += image->h;
 			} while( area.y < rect.y + rect.h );
 
-			image = img_map_["border-topleft"];
-			area.x = rect.x;
-			area.y = rect.y;
-			menu_ref.video().blit_surface(area.x,area.y,image);
-
 			image = img_map_["border-right"];
 			area.x = rect.x + rect.w - thickness_;
 			area.y = rect.y;
@@ -147,11 +145,6 @@ void menu::imgsel_style::draw_row(const menu& menu_ref, const std::vector<std::s
 				menu_ref.video().blit_surface(area.x,area.y,image,NULL,&clip);
 				area.y += image->h;
 			} while( area.y < rect.y + rect.h );
-
-			image = img_map_["border-topright"];
-			area.x = rect.x + rect.w - image->w;
-			area.y = rect.y;
-			menu_ref.video().blit_surface(area.x,area.y,image);
 
 			image = img_map_["border-bottom"];
 			area.x = rect.x;
@@ -161,9 +154,14 @@ void menu::imgsel_style::draw_row(const menu& menu_ref, const std::vector<std::s
 				area.x += image->w;
 			} while( area.x < rect.x + rect.w );
 
-			image = img_map_["border-botright"];
+			image = img_map_["border-topleft"];
+			area.x = rect.x;
+			area.y = rect.y;
+			menu_ref.video().blit_surface(area.x,area.y,image);
+
+			image = img_map_["border-topright"];
 			area.x = rect.x + rect.w - image->w;
-			area.y = rect.y + rect.h - image->h;
+			area.y = rect.y;
 			menu_ref.video().blit_surface(area.x,area.y,image);
 
 			image = img_map_["border-botleft"];
@@ -171,19 +169,26 @@ void menu::imgsel_style::draw_row(const menu& menu_ref, const std::vector<std::s
 			area.y = rect.y + rect.h - image->h;
 			menu_ref.video().blit_surface(area.x,area.y,image);
 
+			image = img_map_["border-botright"];
+			area.x = rect.x + rect.w - image->w;
+			area.y = rect.y + rect.h - image->h;
+			menu_ref.video().blit_surface(area.x,area.y,image);
 		}
+	} else {
+		//default drawing
+		style::draw_row(menu_ref, row, rect, type);
 	}
 }
 
 SDL_Rect menu::imgsel_style::item_size(const std::string& item) const
 {
-	return style::item_size(item);
+	SDL_Rect bounds = style::item_size(item);
+	
+	bounds.w += 2 * thickness_;
+	bounds.h += 2 * thickness_;
+
+	return bounds;
 }
 
-size_t menu::imgsel_style::get_cell_padding()
-{
-	if(!initialized_) load_images();
-	return cell_padding_;
-}
 
-}
+} //namesapce gui
