@@ -40,7 +40,8 @@ SVN trunk (1.1.2+svn):
      orcish sword, pike, pincers, plaguestaff, sling, thorns, torch, touch,
      wail, zombie touch
    * hitpoint distribution graphs under Damage Calculations
-   * stylistic improvements to loadscreen progressbar
+   * improvements to loadscreen progressbar
+   * new selection stlye for menu listboxes
  * multiplayer maps:
    * added multiplayer maps: 8p Morituri
    * revised multiplayer maps: Blitz, Charge, Cynsaun Battlefield, Den of Onis,
